2008-07-28  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	Do not run the configuration wizard if there are lost components.
	Fixes #1066

2008-07-28  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	Do not make it possible to run methods accessing the admin model
	before the wizard has connected to a server.
	Fixes #1075

2008-07-28  Johan Dahlin  <johan@flumotion.com>

	* flumotion/test/test_wizard.py:
	* flumotion/ui/wizard.py:
	Add wizard.getSteps(). Refactor wizard/sidebar to use it internally.
	Document it and use it in the tests.

2008-07-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/wizard/productionsteps.py:
	  Fix tooltips.

2008-07-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/validate-registry.py:
	  Fail if there are undocumented components or properties.
	* flumotion/component/bouncers/bouncer.xml:
	* flumotion/component/bouncers/icalbouncer.xml:
	* flumotion/component/combiners/switch/switch.xml:
	* flumotion/component/consumers/disker/disker.xml:
	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/consumers/shout2/shout2.xml:
	* flumotion/component/encoders/vorbis/vorbis.xml:
	* flumotion/component/misc/httpserver/httpserver.xml:
	* flumotion/component/misc/porter/porter.xml:
	* flumotion/component/misc/repeater/repeater.xml:
	* flumotion/component/producers/audiotest/audiotest.xml:
	* flumotion/component/producers/bttv/bttv.xml:
	* flumotion/component/producers/icecast/icecast.xml:
	* flumotion/component/producers/ivtv/ivtv.py:
	* flumotion/component/producers/ivtv/ivtv.xml:
	* flumotion/component/producers/rtsp/rtsp.xml:
	* flumotion/component/producers/unixdomain/unixdomain.xml:
	* flumotion/component/producers/webcam/webcam.xml:
	  Document properties and components.
	  Fixes #1069 in 1.5 of the 6 estimated hours.

2008-07-26  Thomas Vander Stichele  <thomas at apestaart dot org>
